---------------------------------------------------------------------------------------------------
Version: 0.9.2
Date: 2021-1-10
  Feature:
    - Added tooltips to signal table
    - Added description to the "Upgrade constant combinator" setting
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2020-12-24
  Change:
    - Items marked with '[9.0]' should have been included in previous version notes
    - [9.0] GUI can be moved around on the screen by dragging the title bar
    - [9.0] Slider increments by stack size of the selected outut signal
    - [9.0] Slider increments absolute value.  Actually applied value is negative
  Bugfix:
    - Missing 'x' on Close button, a missing '✓' on confirm button 
    - Normalize tab headings in Changelog
    - Crash when combinator is destroyed while GUI is open
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 2020-12-23
  Feature:
    - Complete GUI rewite to modernize interface
    - Network ID UI not created yet.  Need to modify manually
    - Still a beta release, please notifiy of issues
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2020-12-13
  Feature:
    - Updated for 1.1
---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 2020-05-01
  Bugfix:
    - Fixed /ltncopen would crash on non-circuit-network entities
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2020-03-17
  Bugfix:
    - Fixed style definitions to match changes in 0.18.13
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 2020-01-21
  Feature:
    - Update to Factorio version 0.18 - no changes