@@ -4,6 +4,8 @@ Date: 2021-1-10
   Feature:
     - Added tooltips to signal table
     - Added description to the "Upgrade constant combinator" setting
+  Change:
+    - Reodered Entity Preview and Network ID.  Looks better...
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.1
 Date: 2020-12-24
